--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# misc
+.DS_Store
+.idea
+.vscode
+yarn-error.log
+
 # dependencies
 /node_modules
 /.pnp
