--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 .DS_Store
 .idea
 .vscode
+.eslintcache
 yarn-error.log
 
 # dependencies
@@ -16,13 +17,6 @@ yarn-error.log
 
 # production
 /build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
