--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "redux-saga-actions": "^1.1.0",
+    "reselect": "^4.0.0",
     "styled-components": "^5.2.0",
     "typescript": "~3.7.2"
   },
@@ -53,6 +54,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "@types/redux-saga": "^0.10.5",
+    "@types/reselect": "^2.2.0",
     "@types/styled-components": "^5.1.3",
     "eslint-config-prettier": "^6.12.0",
     "eslint-loader": "^4.0.2",
