--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@types/redux-saga": "^0.10.5",
     "@types/reselect": "^2.2.0",
     "@types/styled-components": "^5.1.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint-config-prettier": "^6.12.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-jest": "^24.0.2",
